assets/css/style.css
/* Roots */ /* Add variables for main colours */
:root {
  --primary_colour: #4d6a3c;
  --primary-pink-color: #cd8390;
  --secondary-color: #e9ddc8;

  --medium-font-size: clamp(1.2rem, 1.3vw, 2rem);
  --h1-font-size: clamp(1.5rem, 2vw, 3rem);
}

/* Resets */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body {
  font-family: "Raleway", sans-serif !important;
}

body {
  min-height: 100%;
}

/* Global Classes */

h2 {
  margin: 20px !important;
}

.row,
.column {
  display: flex;
}
.column {
  flex-direction: column;
}

/* Custom style */

.header {
  padding: 0;
  font-family: "Montserrat", sans-serif;
  display: flex;
  align-items: center;
  font-size: clamp(0.5rem, 1.4vw, 4rem);
}

.name h1 {
  font-size: clamp(0.2rem, 2.6vw, 3rem);
}

#slogan h4 {
  font-size: clamp(0.2rem, 1.1vw, 1.7rem);
}

#slogan {
  margin: 0;
  padding: 0;
  font-weight: bold;
  text-transform: uppercase;
  font-size: 1rem;
}

.logo {
  height: clamp(3rem, 5.3vw, 10rem);
  margin-left: 1em;
  padding: 0.2em 0;
}

.navbar {
  padding: 0 !important;
  text-align: center;
  width: 100%;
}

.navbar-color {
  background-color: #e6e6e6;
}

.nav-link {
  font-weight: 500 !important;
  font-size: clamp(1.4rem, 1.5vw, 1.6rem) !important;
  margin-left: 1em !important;
  width: fit-content;
}

.navbar-nav li:last-of-type a {
  color: var(--primary-pink-color);
}

.dropdown-toggle::after {
  display: none !important;
}

.dropdown-toggle .nav-link:last-of-type {
  padding-right: 0 !important;
}

.dropdown-menu {
  background-color: rgba(255, 255, 255, 0.928) !important ;
  border-radius: 10px;
  color: rgb(255, 255, 255);
  max-width: fit-content;
}

.navbar-nav .dropdown-menu {
  position: a;
}

.dropdown-item {
  text-align: center !important;
  font-size: clamp(1rem, 1.2vw, 2rem) !important;
}

.wishlist button {
  font-size: 1.5rem;
  background-color: transparent;
  border: none;
  width: 100%;
  text-transform: capitalize;
}

.wishlist button:hover {
  background-color: #4d6a3c43;
}

.wishlist hr {
  margin: 0 auto;
  width: 80% !important;
  border-color: black;
}

.wishlist ul {
  list-style: none;
  font-size: 1rem;
}

.wishlist ul:hover {
  background-color: inherit;
}

.wishlist li {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1rem;
  font-weight: 600;
  text-align: center;
}

.remove-poi-btn {
  border: 1px solid rgba(0, 0, 255, 0.534);
  background-color: transparent;
  color: red;
  max-width:fit-content;
  font-size: 1rem;
  margin-left: .3em;
}

.hero {
  position: relative;
  display: flex;
  min-height: 70vh;
  margin-bottom: 4em;
}

.blurred-background {
  background-image: url("../images/louis-paulin-wXEogo6w3co-unsplash-blurred.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: bottom;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: -1;
}

.site-info-container {
  font-family: "Montserrat";
  max-width: fit-content;
  align-self: flex-start;
  text-align: left;
  padding: 2em 2em;
  backdrop-filter: blur(4px);
}

.welcome h1,
.call-to-action h2 {
  font-weight: 500;
  font-size: var(--h1-font-size);
  line-height: var(--h1-font-size);
  letter-spacing: -1px;
  text-transform: capitalize;
  color: #ffffff;
}

.description {
  margin-top: 2em;
  overflow-wrap: break-word;
  font-style: normal;
  font-weight: 300;
  font-size: var(--medium-font-size);
  line-height: var(--medium-font-size);
  color: #ffffffb4;
}

.search-cta-wrapper {
  margin-top: auto;
}

.call-to-action h2 {
  text-align: center;
  margin-bottom: 0 !important;
}

.search-wrapper {
  position: relative;
  display: flex;
  justify-content: center;
  top: 2em;
}

.categories-dropdown {
  margin: 0;
}

#select-category {
  width: 12ch;
  text-transform: capitalize;
  overflow: hidden;
}

.dropdown-arrow {
  height: 1rem;
}

.searchbox-input {
  font-size: var(--medium-font-size);
  padding-left: 1em;
  width: 60%;
  border: none;
  background-color: #ce8390 !important;
  color: white !important;
  outline: transparent;
}

.searchbox-input::placeholder {
  color: #fff;
  font-size: var(--medium-font-size);
}

input:-webkit-autofill,
input:-webkit-autofill:focus {
  transition: background-color 600000s 0s, color 600000s 0s;
}

.search-btn {
  margin: 0 !important;
  align-items: center;
  border: none;
  font-size: clamp(0.5rem, 1.4vw, 2rem);
  background-color: black;
  color: rgb(255, 255, 255) !important ;
}

.half-circle {
  height: clamp(2.5rem, 5vw, 4rem);
}

.magnifying-glass-icon {
  height: 1.5rem;
}

.categories-dropdown-button {
  height: 100%;
  background-color: black;
  color: #ffffff !important;
  border: none;
  padding-right: 0.4em;
}

.welcome h5 {
  text-align: center;
  text-transform: uppercase;
  letter-spacing: 7px;
  padding: 5% 0 1% 0;
  font-size: clamp(1rem, 2vw, 3rem);
}

.modal-title {
  text-transform: capitalize;
  font-size: var(--h1-font-size);
  font-weight: 700;
}


.results-section {
  display: grid;
  grid-template-rows: 700px 200px;
  grid-template-columns: 1.5fr 3fr;
  grid-template-areas:
    "aside map"
    "aside weather";
  gap: 1em;
}

#map {
  width: 100%;
  height: 100%;
}

.map-marker {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: var(--primary-pink-color);
  color: #fff;
  height: 2.5rem;
  width: 2.5rem;
  border-radius: 50%;
}

.poi-card {
  border-radius: 1rem;
  padding: 0.5em;
  border: 0.5px solid var(--primary-pink-color);
  display: flex;
  flex-direction: column;
  margin-bottom: 1em;
}

.poi-card img {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.poi-card_body {
  padding: 0.5em;
}

.add-to-poi-btn {
  display: flex;
  align-items: center;
  border: none;
  background-color: transparent;
  font-size: 1.3rem;
}

.add-to-poi-btn h1 {
  margin: 0 0 0 0.2em;
  color: rgba(255, 0, 0, 0.26);
}

.add-to-poi-btn h1:hover {
  color: red;
}

.add-to-poi-btn h1:active {
  color: red;
  transform: scale(1.3);
}

.aside {
  grid-area: aside;
  display: flex;
  flex-direction: column;
  overflow-y: auto;
  overflow-x: hidden;
}

.poi-list-title {
  text-transform: capitalize;
  text-align: center;
}

#five-day {
  grid-area: weather;
}

.weathersection {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
  gap: 0.5em;
}

.weather-card {
  padding: 0.5em;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: space-between;
  justify-content: center;
  color: var(--primary_colour);
  background-color: var(--secondary-color);
  border-radius: 5px;
}

/* Top cities section */
.top-cities,
.top-articles {
  margin: 2em 0;
  padding: 0 1em;
}

.top-cities h1,
.top-articles h1 {
  font-weight: 600;
  font-size: var(--h1-font-size);
  letter-spacing: -1px;
}

.card-body {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.card-title {
  margin: 0 !important;
  display: inline-block;
}

.card-body img {
  width: 1rem;
  display: inline-block;
}

.card-img-top {
  width: 100%;
  height: clamp(10rem, 15vw, 17rem);
  object-fit: cover;
}

/* Footer */
footer p {
  background-color: black;
  color: var(--secondary-color);
  text-align: center;
  margin: auto 0;
  padding: 0.3em;
}

/* Media Query */
@media screen and (min-width: 600px) {
  .description {
    width: 45ch;
  }
}

@media screen and (max-width: 992px) {

  .weathersection {
    display: grid;
    grid-template-rows: repeat(1,  1fr);
    grid-template-columns: repeat(4,  1fr);
  }

  .results-section {
    display: grid;
    grid-template-rows: repeat(auto-fit, minmax(500px, 1fr));
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    grid-template-areas:
      "map"
      "weather"
      "aside";
    gap: 1em;
  }

  .weathersection {
    grid-template-columns: 1fr;
  }

  .weather-card {
    flex-direction: row;
    justify-content:space-evenly;
    align-items: center;
    font-size: 1rem;;
  }
}

